--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
         "deadlybot",
         "SpamBots"
     ],
-    "repository": "https://t.me/Deadly-Fighters",
+    "repository": "https://t.me/Skhan021",
     "website": "https://t.me/Deadly-Fighters",
     "success_url": "https://t.me/deadly-fighters",
     "env": {
